[gd_scene load_steps=11 format=2]

[ext_resource path="res://Prefabs/Shadow.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Bot.gd" type="Script" id=2]
[ext_resource path="res://Art/Arrow.png" type="Texture" id=3]
[ext_resource path="res://Art/Characters/Demon-Sheet.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 7.93565

[sub_resource type="Animation" id=2]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Character:frame_coords:x")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=3]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Character:frame_coords:x")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 2.0, 3.0, 4.0, 5.0 ]
}

[sub_resource type="Animation" id=4]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:white")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 1.62528, 7.34936 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 8.3381, 1.6308 )

[node name="Bot" type="KinematicBody2D"]
use_parent_material = true
collision_layer = 8
collision_mask = 3
script = ExtResource( 2 )

[node name="Shadow" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 5.5 )
frame = 3

[node name="Character" type="Sprite" parent="."]
use_parent_material = true
position = Vector2( 0, -10 )
texture = ExtResource( 4 )
vframes = 8
hframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -7.5 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource( 2 )
anims/Run = SubResource( 3 )

[node name="Aim" type="Sprite" parent="."]
use_parent_material = true
texture = ExtResource( 3 )

[node name="BulletPosition" type="Position2D" parent="Aim"]
position = Vector2( 40, 0 )

[node name="FlashingPlayer" type="AnimationPlayer" parent="."]
autoplay = "Invinsible"
anims/Invinsible = SubResource( 4 )

[node name="Right" type="Area2D" parent="."]
position = Vector2( 10, -7 )
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
shape = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Left" type="Area2D" parent="."]
position = Vector2( -10, -7 )
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
shape = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Bottom" type="Area2D" parent="."]
position = Vector2( 0, 2 )
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom"]
shape = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Top" type="Area2D" parent="."]
position = Vector2( 0, -17 )
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top"]
shape = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}
[connection signal="body_entered" from="Right" to="." method="_on_Right_body_entered"]
[connection signal="body_entered" from="Left" to="." method="_on_Left_body_entered"]
[connection signal="body_entered" from="Bottom" to="." method="_on_Bottom_body_entered"]
[connection signal="body_entered" from="Top" to="." method="_on_Top_body_entered"]
